<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_tv_white"
    android:layout_below="@+id/ly_title"
    android:orientation="vertical">
    <EditText
        android:id="@+id/et_phone"
        style="@style/login_edittext"
        android:layout_marginTop="@dimen/common_20dp"
        android:inputType="phone"
        android:text="15394521677"
        android:maxLength="11"
        android:hint="@string/login_phone_hint" />

    <LinearLayout
        style="@style/common_white_linear"
        android:layout_marginTop="@dimen/common_20dp">
        <EditText
            android:id="@+id/et_code"
            style="@style/login_edittext"
            android:inputType="number"
            android:maxLength="5"
            android:text="1"
            android:layout_weight="2"
            android:hint="@string/login_code_hint"/>

        <TextView
            android:id="@+id/tv_getcode"
            style="@style/login_getcode"
            android:layout_weight="5"
            android:text="@string/login_get_code" />
    </LinearLayout>
</LinearLayout>